--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>품질인증시스탬</title>
+  <title>품질인증시스템의 발전과정</title>
   <link rel="stylesheet" href="styles.css">
   <script>
+    let currentSectionIndex = 0;
+    let sections;
       
-      function smoothScroll(targetId, duration) {
+    function smoothScroll(targetId, duration) {
       const targetSection = document.getElementById(targetId);
       if (!targetSection) return; // 대상이 없을 경우 함수 종료
   
@@ -38,11 +40,27 @@
     function scrollToSection(link) {
       smoothScroll(link, 1000); // 1000ms 동안 부드럽게 스크롤
       location.hash = link; // URL 해시 업데이트
+
+      let count = 0
+      let beforeIndex = 1
+      sections.forEach(self => {
+        count++;
+        if(self.id == link) beforeIndex = count;
+      })
+      currentSectionIndex = beforeIndex - 1
+      UpdateCSS(sections[currentSectionIndex])
     }
+
+  function UpdateCSS(targetSection) {
+    setTimeout(() => {
+      document.querySelectorAll('.activatecss').forEach(s=> {s.classList.remove('activatecss')});
+      targetSection.classList.add('activatecss');
+    }, 1700);
+  }
   
   document.addEventListener('DOMContentLoaded', () => {
-    const sections = document.querySelectorAll('section');
-    let currentSectionIndex = 0;
+    sections = document.querySelectorAll('section');
+    currentSectionIndex = 0;
     let isScrolling = false;
     let touchStartY = 0;
     let touchEndY = 0;
@@ -61,9 +79,7 @@
           setTimeout(() => {
             isScrolling = false;
           }, 1000);
-          setTimeout(() => {
-            targetSection.classList.add('activatecss')
-          }, 1001);
+          UpdateCSS(targetSection);
         }
       }
     }
@@ -116,6 +132,8 @@
 
     <!-- 제작자 이름 -->
     <footer class="footer">
+      <p>지도교수 최효돈 교수님</p>
+      <p>Yeungin Cyber College</p>
       <p>2469901 산업경영학과 김태현</p>
     </footer>
   </section>
@@ -137,15 +155,15 @@
             </li>
             <li>
               <input href="#ISO-14001" id="2000index" type="button" value="4. ISO 14001" onclick="scrollToSection('ISO-14001')">
-              <label for="2000index">ISO 14001 : 기업의 환경 관리 표준</label>
+              <label for="2000index">ISO 14001 : 환경관리기업경영</label>
             </li>
             <li>
               <input href="#ISO-22000" id="2010index" type="button" value="5. ISO 22000" onclick="scrollToSection('ISO-22000')">
-              <label for="2010index">글로벌 품질인증시스템의 기원과 발전</label>
+              <label for="2010index">ISO 22000 : 식품안전경영</label>
             </li>
             <li>
-              <input href="#now" id="nowindex" type="button" value="6. 현제" onclick="scrollToSection('now')">
-              <label for="nowindex">글로벌 품질인증시스템의 기원과 발전</label>
+              <input href="#ISO-45001" id="nowindex" type="button" value="6. ISO 45001" onclick="scrollToSection('ISO-45001')">
+              <label for="nowindex">ISO 45001 : 산업안전보건경영</label>
             </li>
           </ul>
         </div>
@@ -201,8 +219,8 @@
             영국은 이를 통해 국가 산업의 품질 경쟁력을 높이고자 했습니다.
             BS 5750은 곧 국제적으로도 주목받아 1970년대 말부터 
             캐나다, 호주, 뉴질랜드, 홍콩 등 여러 나라에 확산되기 시작했습니다. 
-            이를 계기로 국제 표준화 기구(ISO)에서도 글로벌 시장에서 통용될 수 있는 
-            품질 관리 기준의 필요성을 인식하게 되는 시기였습니다.
+            이를 계기로 국제 표준화 기구(ISO)에서도 <strong>글로벌 시장에서 통용될 수 있는 
+            품질 관리 기준의 필요성을 인식하게 되는 시기</strong>였습니다.
         </p>
         </div>
         <div class="half">
@@ -221,10 +239,9 @@
           <p>
             1979년에 구성한 ISO/TC 176 기술 위원회를 중심으로 품질 관리 및 보증에 대한 통일된 국제 표준을 개발하기 시작했습니다. 
             ISO에서 1987년에 ISO 9000 시리즈가 발표되었으며, 산업에서 폭넓게 적용될 수 있는 최초의 글로벌 품질 인증 체계였습니다. 
-            시스템 구성은
-            설계와 개발, 생산, 설치, 서비스에 대한 품질 보증 요건을 명시한 ISO 9001, 
-            생산과 설치 단계의 품질 보증에 중점을 둔 ISO 9002, 
-            그리고 최종 검사와 시험에만 적용되는 ISO 9003으로 구성되었습니다. 
+            ISO 9000 시리즈 구성은 <strong>설계와 개발, 생산, 설치, 서비스에 대한 품질 보증 요건을 명시한 ISO 9001</strong>, 
+            <strong> 생산과 설치 단계의 품질 보증에 중점을 둔 ISO 9002</strong>, 
+            그리고 <strong>최종 검사와 시험에만 적용되는 ISO 9003</strong>으로 구성되었습니다. 
             이 세부 규격들은 각기 다른 산업의 요구에 맞춰 적용할 수 있도록 설계되었으며, 
             기업은 제품과 서비스 제공 과정에서 품질 관리를 체계화하고 신뢰성을 확보할 수 있게 되었습니다.
             동일한 ISO 9000 시리즈의 품질 인증 체계를 통해 각국 기업들이 동일한 기준에 따라 동일한 품질 보증을 수행하여
@@ -253,7 +270,7 @@
           ISO 9000 인증을 받은 기업들은 품질 관리 시스템을 체계화하고 지속적인 개선을 촉진하여, 
           고객 만족을 높이고 운영 효율성을 강화할 수 있었습니다.
           1987년의 ISO 9000 시리즈 발표는 품질 관리의 글로벌 표준화를 이룬 중대한 성과로 평가되며, 
-          이후 ISO 9000 시리즈는 점차 각국의 품질 인증 기준으로 자리 잡았습니다.
+          이후 <strong>ISO 9000 시리즈는 점차 각국의 품질 인증 기준</strong>으로 자리 잡았습니다.
           </p>
         </div>
         <div class="half">
@@ -272,10 +289,10 @@
           <p>
             ISO 14001은 환경경영시스템(EMS)에 관한 국제 표준으로,
             1996년에 최초로 규정되었으며, 이후 2004년과 2015년에 두차례 개선되었습니다. 
-            ISO 14001은 기업이 환경 영향을 체계적으로 관리 할 수 있도록 하며,
+            <strong>ISO 14001은 기업이 환경 영향을 체계적으로 관리</strong> 할 수 있도록 하며,
             요즘 중요해지고 있는 환경 관련 문제와 환경 친화적인 트랜드의 요구에 적극 대응할 수 있도록 지원하는 규격입니다.
-            국제표준화기구(ISO)에서 제정한 이 표준은, 기업이 자원 활용의 효율성, 폐기물 감소, 
-            환경 민원 감소 등을 통해 ISO 14001의 규정을 준수함으로서 ESG경영을 실천할 수 있도록 합니다. 
+            ISO 14001의 표준인 기업이 자원 활용의 효율성, 폐기물 감소, 
+            환경 민원 감소 등의 규정을 준수함으로서 ESG경영을 실천할 수 있도록 합니다. 
             ISO 14001 인증시스템은 기업이 환경 규제를 준수하고 이해관계자의 기대에 부응할 수 있는 
             환경경영체계를 구축하도록 장려합니다. 이 표준은 기업의 제품 및 서비스가 환경에 미치는 영향을 체계적으로 관리하고, 
             자원을 보다 효율적으로 사용함으로써 비용 절감 및 비상사태 시 손실을 최소화할 수 있는 방법을 제시합니다. 
@@ -300,7 +317,7 @@
             구체적으로는, 환경 경영을 위한 리더십 및 의지표명, 구체적인 환경 목표 설정, 비상사태 대응 계획 등이 포함됩니다. 
             ISO 14001은 기업의 특성과 규모에 맞게 유연하게 적용할 수 있도록 설계되어 있으며, 
             지속 가능한 발전을 추구할 수 있는 환경 관리 체계를 제공하고 있습니다.
-            ISO 14001 인증을 취득한 기업은 여러 가지 실질적 혜택을 누릴 수 있습니다. 
+            <strong>ISO 14001 인증을 취득한 기업은 여러 가지 실질적 혜택을 누릴 수 있습니다.</strong>
             조달청 입찰 시 경쟁력을 확보할 수 있으며, 
             신용도 평가나 금융기관의 평가는 ISO 14001 인증을 통해 가점을 받을 수 있습니다. 
             또한, 보건신기술 인증 및 이노비즈, 벤처기업 평가 시 우대 혜택을 받을 수 있으며, 
@@ -323,8 +340,8 @@
           <h3>ISO 22000 식품안전경영시스템의 개요와 중요성</h3>
           <br>
           <p>  
-            ISO 22000은 식품안전경영시스템(FSMS)에 대한 국제 표준으로, 
-            식품 공급 사슬 내 모든 조직이 식품 안전을 체계적으로 관리할 수 있도록 돕는 규격입니다. 
+            <strong>ISO 22000은 식품안전경영시스템(FSMS)에 대한 국제 표준으로, 
+            식품 공급 사슬 내 모든 조직이 식품 안전을 체계적으로 관리할 수 있도록 돕는 규격입니다.</strong>
             2005년에 처음 발표된 이후, 2018년에 개정된 이 표준은 HACCP(위해요소 분석 및 중요관리점)와 
             ISO 9001의 요소를 통합하여 개발되었으며, HLS(High-Level Structure) 구조가 적용되어 
             경영 시스템의 통합이 용이해지는 특징이 있습니다. 
@@ -355,8 +372,8 @@
             지속적인 모니터링과 개선 절차도 중요한 부분으로, 이를 통해 식품안전경영시스템의 효과성을 높일 수 있습니다. 
             HACCP과 ISO 22000은 식품안전경영시스템의 핵심 요소로, 
             두 시스템의 효과적인 통합이 요구됩니다. 
-            ISO 22000 인증을 받으면, 기업은 품질, 안전, 합법성을 고려하여 고객의 요구를 충족할 수 있으며, 
-            지속적인 개선을 통해 운영 효율성을 높이고 비용을 절감할 수 있습니다. 또
+            <strong>ISO 22000 인증을 받으면, 기업은 품질, 안전, 합법성을 고려하여 고객의 요구를 충족할 수 있으며, 
+              지속적인 개선을 통해 운영 효율성을 높이고 비용을 절감</strong>할 수 있습니다. 또
             한, 법적 및 규제적 요구사항을 이해하고 이를 준수하는지를 점검하여, 
             높은 수준의 일관성과 추적성을 확보할 수 있습니다.
           </p>
@@ -369,16 +386,68 @@
   </section>
   <section id="ISO-45001">
     <div class="content main">
+      <h2>5. 2000년대 이후 <br> ISO 45001 : 산업안전보건경영</h2>
       <div class="main">
         <div class="half">
-          <h2>5. 2000년대 이후 <br> ISO 45001 : 산업안전경영</h2>
+          <h3> ISO 45001을 통한 작업자 안전 및 건강 증진 경영</h3>
+          <br>
           <p>
-            
+            <strong>45001은 산업안전보건경영시스템의 국제 표준으로, 
+            작업자의 안전과 건강을 증진</strong> 하기 위한 산업안전보건경영 인증 시스템입니다.
+            2018년 3월 발표된 이 표준은 기존 OHSAS 18001에서 발전하여, 
+            리더십과 리스크 관리의 중요성을 강조하고 모든 산업에서 적용할 수 있도록 설계되었습니다. 
+            ISO 45001은 경영시스템 기본구조(HLS)를 도입하여 다른 시스템과의 통합을 용이하게 하고, 
+            최고경영진의 적극적 참여와 의사소통을 통해 시스템의 효과를 높입니다. 또한 조직은 근로자와 
+            이해관계자의 요구를 반영하여 리스크와 기회를 관리하고, 
+            지속적 개선을 촉진할 수 있는 PDCA 모델을 채택하고 있습니다. 이를 통해 사고율을 감소시키고, 
+            안전 문화 향상과 경영 성과 개선에 기여할 수 있습니다.
           </p>
         </div>
         <div class="half">
+          <div class="image safe"></div>
         </div>
       </div>
+    </div>
+  </section>
+  <section id="last-page">
+    <div class="content main">
+      <h2>마치며</h2>
+      <div class="main">
+        <div class="half">
+          <h3>품질 인증의 미래</h3>
+          <br>
+          <p>
+            품질인증시스템은 산업의 변화와 기술 발전에 맞춰 지속적으로 발전해왔습니다. 
+            초기에는 군수품 품질 보증을 중심으로 시작되었지만, 
+            시간이 지나면서 다양한 산업 분야로 확장되었고, 글로벌 표준화 과정에서 큰 역할을 했습니다. 
+            ISO 9000 시리즈를 통해 품질 관리의 국제적 기준을 마련한 것은 품질 보증 시스템의 
+            글로벌 확산을 이끌었으며 다양한 후속 인증 시스템은 환경, 식품 안전, 산업 안전 등의 
+            분야에도 지속 가능한 경영을 위한 기준을 제시하고 있습니다.
+
+            앞으로의 품질 인증 시스템은 앞으로 지속 가능성과 디지털화의 전환을 중심으로 더욱 발전할 것입니다.
+            기업들은 이러한 변화에 적응하면서 품질을 유지하고, 
+            시대에 맞는 새로운 표준이 생길 것이며 품질 인증 시스템에 부합하는 지속 가능한 발전을 이루어야 합니다.
+          </p>
+        </div>
+        <div class="half">
+          <h3>참고 문헌</h3>
+          <br>
+          <p>ISO - International Organization for Standardization</p>
+          <p>https://www.iso.org/standards.html</p>
+          <br>
+          <p>Development of Quality Management System Requirements</p>
+          <p>https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE01868357</p>
+          <br>
+          <p>인증경영지원 센터</p>
+          <p>https://iso-certification.kr/</p>
+          <br>
+          <p>Quality Digest Article : The ISO 14001:2004 Revision</p>
+          <p>https://www.qualitydigest.com/static/magazine/mar05/articles/04_article.shtml</p>
+        </div>
+      </div>
+      <footer class="ending-message">
+        <p>여기까지 읽어 주셔서 감사합니다.</p>
+      </footer>
     </div>
   </section>
 </body>
