--- a/index.html
+++ b/index.html
@@ -191,9 +191,12 @@
           <br>
           <p>
           1970년대에는 미국에서 시작된 군수품 품질 보증 제도가 영국과 유럽으로 확산되며, 
-          보다 범용적인 품질 관리 체계의 필요성이 크게 대두되었습니다. 
+          보다 범용적인 품질 관리 체계의 필요성이 크게 대두되었습니다.
+          <br><br>
           당시 미국의 군수품 품질 관리 규격은 군사 장비나 부품에 대한 엄격한 품질 기준을 설정하여 납품 과정에서의 품질 보증을 목표로 삼았으나, 
-          이 규격이 다른 산업 분야에는 적합하지 않았습니다. 이에 영국은 군수품뿐만 아니라 일반 산업 전반에서 
+          이 규격이 다른 산업 분야에는 적합하지 않았습니다. 
+          <br><br>
+          이에 영국은 군수품뿐만 아니라 일반 산업 전반에서 
           적용할 수 있는 품질 보증 체계를 구축하기 위해 1979년에 BS 5750이라는 새로운 품질 보증 규격을 제정했습니다.
           </p>
           <br/>
@@ -215,10 +218,12 @@
           <br>
           <p>
             BS 5750은 영국 정부의 표준화 기구인 영국 표준협회(BSI)에 의해 개발되었으며, 
-            각 기업이 제품을 생산하거나 서비스를 제공할 때 일관된 품질을 유지할 수 있도록 다양한 품질 관리 절차를 규정했습니다. 
+            각 기업이 제품을 생산하거나 서비스를 제공할 때 일관된 품질을 유지할 수 있도록 다양한 품질 관리 절차를 규정했습니다.
+            <br><br>
             이 규격은 공급자의 품질 보증 능력을 평가하는 시스템 중심의 접근 방식을 도입하여, 
             기업이 제품의 최종 품질뿐 아니라 품질 관리 과정 전반에서 신뢰를 확보할 수 있게 했습니다. 
             영국은 이를 통해 국가 산업의 품질 경쟁력을 높이고자 했습니다.
+            <br><br>
             BS 5750은 곧 국제적으로도 주목받아 1970년대 말부터 
             캐나다, 호주, 뉴질랜드, 홍콩 등 여러 나라에 확산되기 시작했습니다. 
             이를 계기로 국제 표준화 기구(ISO)에서도 <strong>글로벌 시장에서 통용될 수 있는 
@@ -241,11 +246,14 @@
           <p>
             1979년에 구성한 ISO/TC 176 기술 위원회를 중심으로 품질 관리 및 보증에 대한 통일된 국제 표준을 개발하기 시작했습니다. 
             ISO에서 1987년에 ISO 9000 시리즈가 발표되었으며, 산업에서 폭넓게 적용될 수 있는 최초의 글로벌 품질 인증 체계였습니다. 
+            <br><br>
             ISO 9000 시리즈 구성은 <strong>설계와 개발, 생산, 설치, 서비스에 대한 품질 보증 요건을 명시한 ISO 9001</strong>, 
             <strong> 생산과 설치 단계의 품질 보증에 중점을 둔 ISO 9002</strong>, 
             그리고 <strong>최종 검사와 시험에만 적용되는 ISO 9003</strong>으로 구성되었습니다. 
+            <br><br>
             이 세부 규격들은 각기 다른 산업의 요구에 맞춰 적용할 수 있도록 설계되었으며, 
             기업은 제품과 서비스 제공 과정에서 품질 관리를 체계화하고 신뢰성을 확보할 수 있게 되었습니다.
+            <br><br>
             동일한 ISO 9000 시리즈의 품질 인증 체계를 통해 각국 기업들이 동일한 기준에 따라 동일한 품질 보증을 수행하여
             국가 간 무역에서 발생하는 기술적 장벽을 줄이는 효과를 가져왔습니다. 
           </p>
@@ -266,9 +274,11 @@
           <p>
           ISO 9000 시리즈로 인해 유럽과 북미에서 제품을 수출하거나 계약을 체결할 때 각국의 품질 인증 기준을 따로 충족해야 하는 번거로움이 감소했으며, 
           기업들은 무역 비용을 절감하고 품질에 대한 신뢰성을 높일 수 있었습니다. 
+          <br><br>
           1980년대 중반 이후, ISO 9000 시리즈는 제조업뿐만 아니라 서비스 산업과 정부 기관 등 다양한 분야에서 도입되기 시작했습니다. 
           기업들은 ISO 9000 인증을 받음으로써 글로벌 시장에서의 경쟁력을 확보할 수 있었고, 
           품질 관리 체계가 국제 기준을 충족함을 인증받는 것은 고객 신뢰를 향상시키는 중요한 요소로 작용했습니다. 
+          <br><br>
           ISO 9000 인증을 받은 기업들은 품질 관리 시스템을 체계화하고 지속적인 개선을 촉진하여, 
           고객 만족을 높이고 운영 효율성을 강화할 수 있었습니다.
           1987년의 ISO 9000 시리즈 발표는 품질 관리의 글로벌 표준화를 이룬 중대한 성과로 평가되며, 
@@ -291,12 +301,16 @@
           <p>
             ISO 14001은 환경경영시스템(EMS)에 관한 국제 표준으로,
             1996년에 최초로 규정되었으며, 이후 2004년과 2015년에 두차례 개선되었습니다. 
+            <br><br>
             <strong>ISO 14001은 기업이 환경 영향을 체계적으로 관리</strong> 할 수 있도록 하며,
             요즘 중요해지고 있는 환경 관련 문제와 환경 친화적인 트랜드의 요구에 적극 대응할 수 있도록 지원하는 규격입니다.
+            <br><br>
             ISO 14001의 표준인 기업이 자원 활용의 효율성, 폐기물 감소, 
             환경 민원 감소 등의 규정을 준수함으로서 ESG경영을 실천할 수 있도록 합니다. 
             ISO 14001 인증시스템은 기업이 환경 규제를 준수하고 이해관계자의 기대에 부응할 수 있는 
-            환경경영체계를 구축하도록 장려합니다. 이 표준은 기업의 제품 및 서비스가 환경에 미치는 영향을 체계적으로 관리하고, 
+            환경경영체계를 구축하도록 장려합니다. 
+            <br><br>
+            ISO 14001은 기업의 제품 및 서비스가 환경에 미치는 영향을 체계적으로 관리하고, 
             자원을 보다 효율적으로 사용함으로써 비용 절감 및 비상사태 시 손실을 최소화할 수 있는 방법을 제시합니다. 
             특히 ISO 14001은 환경 관리의 투명성과 신뢰성을 높이고, 이를 통해 기업의 경쟁력을 강화하는 데 기여합니다.
           </p>
@@ -317,13 +331,16 @@
           <p>
             ISO 14001의 주요 요구 사항은 크게 리더십, 계획 수립, 지원, 운영, 성과 평가, 개선 등으로 나뉩니다.
             구체적으로는, 환경 경영을 위한 리더십 및 의지표명, 구체적인 환경 목표 설정, 비상사태 대응 계획 등이 포함됩니다. 
+            <br><br>
             ISO 14001은 기업의 특성과 규모에 맞게 유연하게 적용할 수 있도록 설계되어 있으며, 
             지속 가능한 발전을 추구할 수 있는 환경 관리 체계를 제공하고 있습니다.
+            <br><br>
             <strong>ISO 14001 인증을 취득한 기업은 여러 가지 실질적 혜택을 누릴 수 있습니다.</strong>
             조달청 입찰 시 경쟁력을 확보할 수 있으며, 
             신용도 평가나 금융기관의 평가는 ISO 14001 인증을 통해 가점을 받을 수 있습니다. 
             또한, 보건신기술 인증 및 이노비즈, 벤처기업 평가 시 우대 혜택을 받을 수 있으며, 
             일부 지원 사업을 통해 인증 취득 비용을 절감할 수도 있습니다.
+            <br><br>
             ISO 14001은 기업이 환경 관리의 투명성과 신뢰성을 확보하고, 
             환경 민원과 법적 리스크를 줄이는 동시에 사회적 책임을 실천하는 데 중요한 역할을 합니다.
           </p>
@@ -344,11 +361,14 @@
           <p>  
             <strong>ISO 22000은 식품안전경영시스템(FSMS)에 대한 국제 표준으로, 
             식품 공급 사슬 내 모든 조직이 식품 안전을 체계적으로 관리할 수 있도록 돕는 규격입니다.</strong>
+            <br><br>
             2005년에 처음 발표된 이후, 2018년에 개정된 이 표준은 HACCP(위해요소 분석 및 중요관리점)와 
             ISO 9001의 요소를 통합하여 개발되었으며, HLS(High-Level Structure) 구조가 적용되어 
             경영 시스템의 통합이 용이해지는 특징이 있습니다. 
+            <br><br>
             ISO 22000은 식품 안전에 대한 요구사항을 표준화하여 조직이 안전한 제품을 지속적으로 제공할 수 있도록 지원하며, 
             사료 생산자, 농가, 식품 제조업체 등 다양한 조직에 적용됩니다. 
+            <br><br>
             또한, ISO 22000은 ISO 9001 및 ISO 14001과의 통합이 가능하여 종합적인 경영 시스템으로 활용될 수 있습니다.
           </p>
         </div>
@@ -368,15 +388,18 @@
           <p>
             ISO 22000 규격은 식품안전경영시스템에 대한 일반 요구사항, 
             문서화 요구사항, 경영 책임 등을 포함하고 있습니다. 
+            <br><br>
             경영 책임 항목에서는 식품안전 방침과 팀장의 책임이 명시되어 있으며, 
             자원 관리 부분에서는 인적 자원과 환경, 기반 시설에 대한 요구사항이 중요하게 다루어집니다. 
+            <br><br>
             또한, 안전한 제품 기획과 위해 분석 절차, HACCP 계획의 문서화가 핵심적으로 강조됩니다. 
             지속적인 모니터링과 개선 절차도 중요한 부분으로, 이를 통해 식품안전경영시스템의 효과성을 높일 수 있습니다. 
-            HACCP과 ISO 22000은 식품안전경영시스템의 핵심 요소로, 
-            두 시스템의 효과적인 통합이 요구됩니다. 
+            HACCP과 ISO 22000은 식품안전경영시스템의 핵심 요소로, 두 시스템의 효과적인 통합이 요구됩니다. 
+            <br><br>
             <strong>ISO 22000 인증을 받으면, 기업은 품질, 안전, 합법성을 고려하여 고객의 요구를 충족할 수 있으며, 
-              지속적인 개선을 통해 운영 효율성을 높이고 비용을 절감</strong>할 수 있습니다. 또
-            한, 법적 및 규제적 요구사항을 이해하고 이를 준수하는지를 점검하여, 
+              지속적인 개선을 통해 운영 효율성을 높이고 비용을 절감</strong>할 수 있습니다. 
+            <br><br>
+            또한, 법적 및 규제적 요구사항을 이해하고 이를 준수하는지를 점검하여, 
             높은 수준의 일관성과 추적성을 확보할 수 있습니다.
           </p>
         </div>
@@ -396,13 +419,16 @@
           <p>
             <strong>45001은 산업안전보건경영시스템의 국제 표준으로, 
             작업자의 안전과 건강을 증진</strong> 하기 위한 산업안전보건경영 인증 시스템입니다.
+            <br><br>
             2018년 3월 발표된 이 표준은 기존 OHSAS 18001에서 발전하여, 
             리더십과 리스크 관리의 중요성을 강조하고 모든 산업에서 적용할 수 있도록 설계되었습니다. 
+            <br><br>
             ISO 45001은 경영시스템 기본구조(HLS)를 도입하여 다른 시스템과의 통합을 용이하게 하고, 
             최고경영진의 적극적 참여와 의사소통을 통해 시스템의 효과를 높입니다. 또한 조직은 근로자와 
             이해관계자의 요구를 반영하여 리스크와 기회를 관리하고, 
-            지속적 개선을 촉진할 수 있는 PDCA 모델을 채택하고 있습니다. 이를 통해 사고율을 감소시키고, 
-            안전 문화 향상과 경영 성과 개선에 기여할 수 있습니다.
+            지속적 개선을 촉진할 수 있는 PDCA 모델을 채택하고 있습니다.
+            <br><br>
+            이를 통해 사고율을 감소시키고,  안전 문화 향상과 경영 성과 개선에 기여할 수 있습니다.
           </p>
         </div>
         <div class="half">
@@ -422,10 +448,11 @@
             품질인증시스템은 산업의 변화와 기술 발전에 맞춰 지속적으로 발전해왔습니다. 
             초기에는 군수품 품질 보증을 중심으로 시작되었지만, 
             시간이 지나면서 다양한 산업 분야로 확장되었고, 글로벌 표준화 과정에서 큰 역할을 했습니다. 
+            <br><br>
             ISO 9000 시리즈를 통해 품질 관리의 국제적 기준을 마련한 것은 품질 보증 시스템의 
             글로벌 확산을 이끌었으며 다양한 후속 인증 시스템은 환경, 식품 안전, 산업 안전 등의 
             분야에도 지속 가능한 경영을 위한 기준을 제시하고 있습니다.
-
+            <br><br>
             앞으로의 품질 인증 시스템은 앞으로 지속 가능성과 디지털화의 전환을 중심으로 더욱 발전할 것입니다.
             기업들은 이러한 변화에 적응하면서 품질을 유지하고, 
             시대에 맞는 새로운 표준이 생길 것이며 품질 인증 시스템에 부합하는 지속 가능한 발전을 이루어야 합니다.
@@ -437,10 +464,10 @@
           <p>ISO - International Organization for Standardization</p>
           <p>https://www.iso.org/standards.html</p>
           <br>
-          <p>Development of Quality Management System Requirements</p>
+          <p>Development of Quality Management System Requirements [2011.06.09]</p>
           <p>https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE01868357</p>
           <br>
-          <p>인증경영지원 센터</p>
+          <p>인증경영지원 센터 [2023. 09. 15]</p>
           <p>https://iso-certification.kr/</p>
           <br>
           <p>Quality Digest Article : The ISO 14001:2004 Revision</p>
